--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "api-test",
+  "name": "api",
   "version": "1.0.0",
-  "description": "test task",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && webpack",
-    "dev": "webpack-dev-server --open --watch"
+    "build": "webpack --mode production",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/amillerr/api-test.git"
   },
-  "author": "Aksenov Artem",
+  "author": "Artem Aksenov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/amillerr/api-test/issues"
@@ -20,15 +20,15 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
-    "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
-    "cssnano": "^5.1.5",
-    "html-loader": "^1.3.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.0",
     "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
